testsuite/tests/saks/should_fail/saks_fail003.stderr

saks_fail003.hs:6:11: error:
    Wildcard ‘_w’ not allowed
      in the standalone kind signature for T
